finishing off - still need to read over once more

--- a/documents/GProtation.bib
+++ b/documents/GProtation.bib
@@ -3018,3 +3018,94 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...800...59V},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Horne1986,
+   author = {{Horne}, J.~H. and {Baliunas}, S.~L.},
+    title = "{A prescription for period analysis of unevenly sampled time series}",
+  journal = {\apj},
+ keywords = {Computational Astrophysics, Periodic Functions, Time Series Analysis, Fourier Analysis, Probability Distribution Functions, Sampling, Signal To Noise Ratios, Variance (Statistics)},
+     year = 1986,
+    month = mar,
+   volume = 302,
+    pages = {757-763},
+      doi = {10.1086/164037},
+   adsurl = {http://adsabs.harvard.edu/abs/1986ApJ...302..757H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Kovacs1981,
+   author = {{Kovacs}, G.},
+    title = "{Frequency shift in Fourier analysis}",
+  journal = {\apss},
+ keywords = {Background Noise, Error Analysis, Fourier Analysis, Frequency Shift, Signal Processing, Stellar Spectrophotometry, Data Reduction, Light Curve, Probability Distribution Functions, Spectrum Analysis, Variable Stars},
+     year = 1981,
+    month = aug,
+   volume = 78,
+    pages = {175-188},
+      doi = {10.1007/BF00654032},
+   adsurl = {http://adsabs.harvard.edu/abs/1981Ap%26SS..78..175K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Foremanmackey2017,
+   author = {{Foreman-Mackey}, D. and {Agol}, E. and {Angus}, R. and {Ambikasaran}, S.
+	},
+    title = "{Fast and scalable Gaussian process modeling with applications to astronomical time series}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1703.09710},
+ primaryClass = "astro-ph.IM",
+ keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics, Physics - Data Analysis, Statistics and Probability, Statistics - Applications},
+     year = 2017,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170309710F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Kawaler1989,
+   author = {{Kawaler}, S.~D.},
+    title = "{Rotational dating of middle-aged stars}",
+  journal = {\apjl},
+ keywords = {Main Sequence Stars, Stellar Evolution, Stellar Models, Stellar Rotation, Angular Momentum, Calibrating, Open Clusters, Stellar Mass, Stellar Winds},
+     year = 1989,
+    month = aug,
+   volume = 343,
+    pages = {L65-L68},
+      doi = {10.1086/185512},
+   adsurl = {http://adsabs.harvard.edu/abs/1989ApJ...343L..65K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Barnes2007,
+   author = {{Barnes}, S.~A.},
+    title = "{Ages for Illustrative Field Stars Using Gyrochronology: Viability, Limitations, and Errors}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0704.3068},
+ keywords = {Galaxy: Open Clusters and Associations: General, Stars: Activity, Stars: Evolution, Stars: Late-Type, Stars: Magnetic Fields, Stars: Rotation},
+     year = 2007,
+    month = nov,
+   volume = 669,
+    pages = {1167-1189},
+      doi = {10.1086/519295},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...669.1167B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Foremanmackey2014,
+   author = {{Foreman-Mackey}, D. and {Hogg}, D.~W. and {Morton}, T.~D.},
+    title = "{Exoplanet Population Inference and the Abundance of Earth Analogs from Noisy, Incomplete Catalogs}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1406.3020},
+ primaryClass = "astro-ph.EP",
+ keywords = {catalogs, methods: data analysis, methods: statistical, planetary systems, stars: statistics },
+     year = 2014,
+    month = nov,
+   volume = 795,
+      eid = {64},
+    pages = {64},
+      doi = {10.1088/0004-637X/795/1/64},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...795...64F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
